Fix z-index of buttons

--- a/frontend/src/customizations/@eeacms/volto-block-image-cards/ImageCards/css/discreetcarousel.less
+++ b/frontend/src/customizations/@eeacms/volto-block-image-cards/ImageCards/css/discreetcarousel.less
@@ -327,7 +327,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  z-index: 99999999;
+  z-index: 5;
   // background-color: violet;
   position: relative;
   bottom: 260px;
